--- a/index.html
+++ b/index.html
@@ -10,14 +10,54 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <!-- Styles -->
   <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="./css/style.css">
   <title>Portfolio - HTMTMX</title>
 </head>
 <body>
+  <header class="container">
+    <div class="nav row justify-content-between my-5 rounded-top g-0">
+      <!-- Logo -->
+      <div class="logo col-auto d-flex align-items-center ps-4">
+        <h2 class="fw-bold text-uppercase text-white mb-0">César Haziel Pineda Pacheco</h2>
+        <div class="icono">
+          <img src="./assets/logo/wolf_w.png" alt="logo">
+        </div>
+        <p class="mb-0 text-white text-muted">Web Developer</p>
+        </h2>
+      </div>
+      <!-- Links -->
+      <nav class="menu col-auto d-flex align-items-stretch">
+        <a href="#" class="c1 px-4 d-flex align-items-center text-center text-decoration-none text-white">
+          <div class="w-100">
+            <span>Portfolio</span>
+            <div class="icono text-white">
+              <i class="bi bi-briefcase-fill"></i>
+            </div>
+          </div>
+        </a>
+        <a href="#" class="c2 px-4 d-flex align-items-center text-center text-decoration-none text-white">
+          <div class="w-100">
+            <span>About me</span>
+            <div class="icono text-white">
+              <i class="bi bi-person-circle"></i>
+            </div>
+          </div>
+        </a>
+        <a href="#" class="c3 px-4 d-flex align-items-center text-center text-decoration-none text-white">
+          <div class="w-100">
+            <span>Contact</span>
+            <div class="icono text-white">
+              <i class="bi bi-envelope-fill"></i>
+            </div>
+          </div>
+        </a>
+      </nav>
+    </div>
+  </header>
   <div class="container">
     <div class="row">
       <div class="col">
-        <h5>Hola mundo</h5>
       </div>
     </div>
   </div>
