--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 </head>
 <body>
   <header class="container">
-    <div class="nav row justify-content-between my-5 rounded-top g-0">
+    <div class="nav row justify-content-between mt-5 rounded-top g-0">
       <!-- Logo -->
       <div class="logo col-auto d-flex align-items-center ps-4">
-        <h2 class="fw-bold text-uppercase text-white mb-0">César Haziel Pineda Pacheco</h2>
-        <div class="icono">
+        <h2 class="fw-bold text-uppercase text-white mb-0">César Haziel <br>Pineda Pacheco</h2>
+        <div class="icono my-3">
           <img src="./assets/logo/wolf_w.png" alt="logo">
         </div>
         <p class="mb-0 text-white text-muted">Web Developer</p>
@@ -53,6 +53,37 @@
           </div>
         </a>
       </nav>
+    </div>
+    <!-- Slider -->
+    <div class="row slider">
+      <div class="col">
+        <div class="carousel slide" data-bs-ride="carousel" id="slider">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="./assets/carousel/carousel1.jpg" alt="">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./assets/carousel/carousel2.jpg" alt="">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./assets/carousel/carousel3.jpg" alt="">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#slider" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#slider" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#slider" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slideshow 1"></button>
+            <button type="button" data-bs-target="#slider" data-bs-slide-to="1" aria-label="Slideshow 2"></button>
+            <button type="button" data-bs-target="#slider" data-bs-slide-to="2" aria-label="Slideshow 3"></button>
+          </div>
+        </div>
+      </div>
     </div>
   </header>
   <div class="container">
