03 Creation of section Portfolio with grid of bootstrap 5

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <title>Portfolio - HTMTMX</title>
 </head>
 <body>
-  <header class="container">
+  <header class="container my-5">
     <div class="nav row justify-content-between mt-5 rounded-top g-0">
       <!-- Logo -->
       <div class="logo col-auto d-flex align-items-center ps-4">
@@ -86,12 +86,52 @@
       </div>
     </div>
   </header>
-  <div class="container">
-    <div class="row">
-      <div class="col">
+  <main>
+    <div class="container">
+      <div class="row portfolio g-0 px-4 mb-5">
+        <div class="col">
+          <h2 class="title text-center py-5">Portfolio</h2>
+          <div class="row gallery">
+            <div class="container-img mb-4 col-4">
+              <a href="">
+                <img class="d-block w-100" src="./assets/img/img-1.jpg" alt="">
+              </a>
+            </div>
+            <div class="container-img mb-4 col-8">
+              <a href="">
+                <img class="d-block w-100" src="./assets/img/img-2.jpg" alt="">
+              </a>
+            </div>
+            <div class="container-img mb-4 col-8">
+              <a href="">
+                <img class="d-block w-100" src="./assets/img/img-3.jpg" alt="">
+              </a>
+            </div>
+            <div class="container-img mb-4 col-4">
+              <a href="">
+                <img class="d-block w-100" src="./assets/img/img-4.jpg" alt="">
+              </a>
+            </div>
+            <div class="container-img mb-4 col-4">
+              <a href="">
+                <img class="d-block w-100" src="./assets/img/img-5.jpg" alt="">
+              </a>
+            </div>
+            <div class="container-img mb-4 col-4">
+              <a href="">
+                <img class="d-block w-100" src="./assets/img/img-6.jpg" alt="">
+              </a>
+            </div>
+            <div class="container-img mb-4 col-4">
+              <a href="">
+                <img class="d-block w-100" src="./assets/img/img-7.jpg" alt="">
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
+  </main>
   <script src="./js/bootstrap.bundle.min.js"></script>
   <script src="./js/app.js"></script>
 </body>
