05 Adding function responsive with media queries and orders

--- a/index.html
+++ b/index.html
@@ -92,37 +92,37 @@
         <div class="col">
           <h2 class="title text-center py-5">Portfolio</h2>
           <div class="row gallery">
-            <div class="container-img mb-4 col-4">
+            <div class="container-img mb-4 col-6 col-lg-4">
               <a href="">
                 <img class="d-block w-100" src="./assets/img/img-1.jpg" alt="">
               </a>
             </div>
-            <div class="container-img mb-4 col-8">
+            <div class="container-img mb-4 col-12 col-lg-8">
               <a href="">
                 <img class="d-block w-100" src="./assets/img/img-2.jpg" alt="">
               </a>
             </div>
-            <div class="container-img mb-4 col-8">
+            <div class="container-img mb-4 col-12 col-lg-8">
               <a href="">
                 <img class="d-block w-100" src="./assets/img/img-3.jpg" alt="">
               </a>
             </div>
-            <div class="container-img mb-4 col-4">
+            <div class="container-img mb-4 col-6 col-lg-4">
               <a href="">
                 <img class="d-block w-100" src="./assets/img/img-4.jpg" alt="">
               </a>
             </div>
-            <div class="container-img mb-4 col-4">
+            <div class="container-img mb-4 col-6 col-lg-4">
               <a href="">
                 <img class="d-block w-100" src="./assets/img/img-5.jpg" alt="">
               </a>
             </div>
-            <div class="container-img mb-4 col-4">
+            <div class="container-img mb-4 col-6 col-lg-4">
               <a href="">
                 <img class="d-block w-100" src="./assets/img/img-6.jpg" alt="">
               </a>
             </div>
-            <div class="container-img mb-4 col-4">
+            <div class="container-img mb-4 col-12 col-lg-4">
               <a href="">
                 <img class="d-block w-100" src="./assets/img/img-7.jpg" alt="">
               </a>
