--- a/index.html
+++ b/index.html
@@ -92,40 +92,59 @@
         <div class="col">
           <h2 class="title text-center py-5">Portfolio</h2>
           <div class="row gallery">
+            <!-- Image 1 -->
             <div class="container-img mb-4 col-6 col-lg-4">
-              <a href="">
+              <a href="#" data-bs-toggle="modal" data-bs-target="#modal-gallery">
                 <img class="d-block w-100" src="./assets/img/img-1.jpg" alt="">
               </a>
             </div>
+            <!-- Image 2 -->
             <div class="container-img mb-4 col-12 col-lg-8">
-              <a href="">
+              <a href="#" data-bs-toggle="modal" data-bs-target="#modal-gallery">
                 <img class="d-block w-100" src="./assets/img/img-2.jpg" alt="">
               </a>
             </div>
+            <!-- Image 3 -->
             <div class="container-img mb-4 col-12 col-lg-8">
-              <a href="">
+              <a href="#" data-bs-toggle="modal" data-bs-target="#modal-gallery">
                 <img class="d-block w-100" src="./assets/img/img-3.jpg" alt="">
               </a>
             </div>
+            <!-- Image 4 -->
             <div class="container-img mb-4 col-6 col-lg-4">
-              <a href="">
+              <a href="#" data-bs-toggle="modal" data-bs-target="#modal-gallery">
                 <img class="d-block w-100" src="./assets/img/img-4.jpg" alt="">
               </a>
             </div>
+            <!-- Image 5 -->
             <div class="container-img mb-4 col-6 col-lg-4">
-              <a href="">
+              <a href="#" data-bs-toggle="modal" data-bs-target="#modal-gallery">
                 <img class="d-block w-100" src="./assets/img/img-5.jpg" alt="">
               </a>
             </div>
+            <!-- Image 6 -->
             <div class="container-img mb-4 col-6 col-lg-4">
-              <a href="">
+              <a href="#" data-bs-toggle="modal" data-bs-target="#modal-gallery">
                 <img class="d-block w-100" src="./assets/img/img-6.jpg" alt="">
               </a>
             </div>
+            <!-- Image 7 -->
             <div class="container-img mb-4 col-12 col-lg-4">
-              <a href="">
+              <a href="#" data-bs-toggle="modal" data-bs-target="#modal-gallery">
                 <img class="d-block w-100" src="./assets/img/img-7.jpg" alt="">
               </a>
+            </div>
+          </div>
+          <!-- Modal Window -->
+          <div class="modal fade" 
+          id="modal-gallery" 
+          tabindex="-1"
+          aria-labelledby="modal-gallery"
+          aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-content">
+                <img src="" alt="..." id="modal-image">
+              </div>
             </div>
           </div>
         </div>
