--- a/index.html
+++ b/index.html
@@ -88,9 +88,11 @@
   </header>
   <main>
     <div class="container">
+      <!-- Portfolio -->
       <div class="row portfolio g-0 px-4 mb-5">
         <div class="col">
           <h2 class="title text-center py-5">Portfolio</h2>
+          <!-- Gallery -->
           <div class="row gallery">
             <!-- Image 1 -->
             <div class="container-img mb-4 col-6 col-lg-4">
@@ -145,6 +147,51 @@
               <div class="modal-content">
                 <img src="" alt="..." id="modal-image">
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- About -->
+      <div class="row about align-items-center px-4 mb-5">
+        <div class="col-12 col-lg-4 photo text-center">
+          <img class="rounded-circle img-fluid mb-3 w-75" src="./assets/logo/profile.jpg" alt="img-profile">
+          <p class="name-profile">Pineda Pacheco César Haziel</p>
+        </div>
+        <div class="col-12 col-lg-8 info">
+          <h2 class="title text-center text-lg-start">About</h2>
+          <p class="resume">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, ea aliquam debitis ex accusamus porro. Aperiam ab possimus officiis quia? Quas rem, veniam temporibus incidunt ullam sapiente placeat, nam repellendus maxime ab iste eveniet ipsum repellat veritatis aspernatur quam ea quidem dicta ut! Nostrum dolore est id officiis ad fugiat.</p>
+          <p class="resume">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, ea aliquam debitis ex accusamus porro. Aperiam ab possimus officiis quia? Quas rem, veniam temporibus incidunt ullam sapiente placeat, nam repellendus maxime ab iste eveniet ipsum repellat veritatis aspernatur quam ea quidem dicta ut! Nostrum dolore est id officiis ad fugiat.</p>
+          <p class="label">HTML</p>
+          <div class="progress mb-3">
+            <div class="progress-bar"
+            role="progressbar"
+            aria-valuemin="0"
+            aria-valuemax="100"
+            aria-valuenow="90"
+            style="width: 90%;">
+              90%
+            </div>
+          </div>
+          <p class="label">CSS</p>
+          <div class="progress mb-3">
+            <div class="progress-bar"
+            role="progressbar"
+            aria-valuemin="0"
+            aria-valuemax="100"
+            aria-valuenow="50"
+            style="width: 50%;">
+              50%
+            </div>
+          </div>
+          <p class="label">JavaScript</p>
+          <div class="progress mb-3">
+            <div class="progress-bar"
+            role="progressbar"
+            aria-valuemin="0"
+            aria-valuemax="100"
+            aria-valuenow="65"
+            style="width: 65%;">
+              65%
             </div>
           </div>
         </div>
