--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
       <!-- Links -->
       <nav class="menu col-auto d-flex align-items-stretch">
-        <a href="#" class="c1 px-4 d-flex align-items-center text-center text-decoration-none text-white">
+        <a href="#portfolio" class="c1 px-4 d-flex align-items-center text-center text-decoration-none text-white">
           <div class="w-100">
             <span>Portfolio</span>
             <div class="icono text-white">
@@ -36,7 +36,7 @@
             </div>
           </div>
         </a>
-        <a href="#" class="c2 px-4 d-flex align-items-center text-center text-decoration-none text-white">
+        <a href="#about" class="c2 px-4 d-flex align-items-center text-center text-decoration-none text-white">
           <div class="w-100">
             <span>About me</span>
             <div class="icono text-white">
@@ -44,7 +44,7 @@
             </div>
           </div>
         </a>
-        <a href="#" class="c3 px-4 d-flex align-items-center text-center text-decoration-none text-white">
+        <a href="#contact" class="c3 px-4 d-flex align-items-center text-center text-decoration-none text-white">
           <div class="w-100">
             <span>Contact</span>
             <div class="icono text-white">
@@ -89,7 +89,7 @@
   <main>
     <div class="container">
       <!-- Portfolio -->
-      <div class="row portfolio g-0 px-4 mb-5">
+      <div class="row portfolio g-0 px-4 mb-5" id="portfolio">
         <div class="col">
           <h2 class="title text-center py-5">Portfolio</h2>
           <!-- Gallery -->
@@ -152,13 +152,13 @@
         </div>
       </div>
       <!-- About -->
-      <div class="row about align-items-center px-4 mb-5">
+      <div class="row about align-items-center g-0 px-4 mb-5" id="about">
         <div class="col-12 col-lg-4 photo text-center">
           <img class="rounded-circle img-fluid mb-3 w-75" src="./assets/logo/profile.jpg" alt="img-profile">
           <p class="name-profile">Pineda Pacheco César Haziel</p>
         </div>
-        <div class="col-12 col-lg-8 info">
-          <h2 class="title text-center text-lg-start">About</h2>
+        <div class="col-12 col-lg-8 info mb-5">
+          <h2 class="title text-center text-lg-start py-5">About</h2>
           <p class="resume">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, ea aliquam debitis ex accusamus porro. Aperiam ab possimus officiis quia? Quas rem, veniam temporibus incidunt ullam sapiente placeat, nam repellendus maxime ab iste eveniet ipsum repellat veritatis aspernatur quam ea quidem dicta ut! Nostrum dolore est id officiis ad fugiat.</p>
           <p class="resume">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, ea aliquam debitis ex accusamus porro. Aperiam ab possimus officiis quia? Quas rem, veniam temporibus incidunt ullam sapiente placeat, nam repellendus maxime ab iste eveniet ipsum repellat veritatis aspernatur quam ea quidem dicta ut! Nostrum dolore est id officiis ad fugiat.</p>
           <p class="label">HTML</p>
@@ -194,6 +194,37 @@
               65%
             </div>
           </div>
+        </div>
+      </div>
+      <!-- Contact -->
+      <div class="row contact justify-content-center py-5 mb-5" id="contact">
+        <div class="col-12 col-lg-10">
+          <h2 class="title">Contact</h2>
+          <form action="" class="form">
+            <div class="row">
+              <div class="col-12 col-lg-6">
+                <div class="form-floating mb-3">
+                  <input type="text" name="name_txt" id="name_txt" class="form-control" placeholder="John Smith">
+                  <label for="name_txt">Name</label>
+                </div>
+              </div>
+              <div class="col-12 col-lg-6">
+                <div class="form-floating mb-3">
+                  <input type="email" name="email_txt" id="email_txt" class="form-control" placeholder="John Smith">
+                  <label for="email_txt">Email</label>
+                </div>
+              </div>
+              <div class="col-12">
+                <div class="form-floating mb-3">
+                  <textarea name="message" id="message" class="form-control" placeholder="Message"></textarea>
+                  <label for="message">Message</label>
+                </div>
+                <div class="d-flex justify-content-center">
+                  <button class="button_send" type="submit">Send</button>
+                </div>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
     </div>
