--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <title>Portfolio - HTMTMX</title>
 </head>
 <body>
@@ -153,7 +154,7 @@
       </div>
       <!-- About -->
       <div class="row about align-items-center g-0 px-4 mb-5" id="about">
-        <div class="col-12 col-lg-4 photo text-center">
+        <div class="col-12 col-lg-4 photo text-center mt-5 mt-lg-0">
           <img class="rounded-circle img-fluid mb-3 w-75" src="./assets/logo/profile.jpg" alt="img-profile">
           <p class="name-profile">Pineda Pacheco César Haziel</p>
         </div>
@@ -229,6 +230,38 @@
       </div>
     </div>
   </main>
+  <!-- Footer -->
+  <footer>
+    <div class="container">
+      <div class="row social-networks justify-content-center">
+        <div class="col-auto mb-3 mb-lg-0">
+          <a href="https://github.com/htmtmx" class="icon git-hub d-inline-flex justify-content-center align-items-center" target="_blank">
+            <i class="bi bi-github"></i>
+          </a>
+        </div>
+        <div class="col-auto mb-3 mb-lg-0">
+          <a href="https://www.facebook.com/htmtmx/" class="icon facebook d-inline-flex justify-content-center align-items-center" target="_blank">
+            <i class="bi bi-facebook"></i>
+          </a>
+        </div>
+        <div class="col-auto mb-3 mb-lg-0">
+          <a href="https://www.linkedin.com/in/c%C3%A9sar-haziel-pineda-pacheco-8b162b228" class="icon linkedin d-inline-flex justify-content-center align-items-center" target="_blank">
+            <i class="bi bi-linkedin"></i>
+          </a>
+        </div>
+        <div class="col-auto mb-3 mb-lg-0">
+          <a href="https://api.whatsapp.com/send?phone=525539832331" class="icon whatsapp d-inline-flex justify-content-center align-items-center" target="_blank">
+            <i class="bi bi-whatsapp"></i>
+          </a>
+        </div>
+        <div class="col-auto mb-3 mb-lg-0">
+          <a href="https://twitter.com/htmtmx" class="icon twitter d-inline-flex justify-content-center align-items-center" target="_blank">
+            <i class="bi bi-twitter"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="./js/bootstrap.bundle.min.js"></script>
   <script src="./js/app.js"></script>
 </body>
